--- a/disable_quick_create/i18n/fr.po
+++ b/disable_quick_create/i18n/fr.po
@@ -18,7 +18,7 @@ msgstr ""
 #. module: disable_quick_create
 #: model:ir.model.fields,field_description:disable_quick_create.field_ir_model_disable_create_edit
 msgid "Disable the Create and Edit option"
-msgstr "Désactiver de l’option Créer et modifier"
+msgstr "Désactiver l’option Créer et modifier"
 
 #. module: disable_quick_create
 #: model:ir.model,name:disable_quick_create.model_ir_model
