--- a/web_search_date_range_account/i18n/fr.po
+++ b/web_search_date_range_account/i18n/fr.po
@@ -2,15 +2,15 @@
 # This file contains the translation of the following modules:
 # 	* web_search_date_range_account
 #
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-18 21:11+0000\n"
-"PO-Revision-Date: 2018-10-18 17:11-0400\n"
+"POT-Creation-Date: 2018-08-30 12:19-0400\n"
+"PO-Revision-Date: 2018-08-30 15:52+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
-"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,24 +18,14 @@ msgstr ""
 "X-Generator: Poedit 2.0.6\n"
 
 #. module: web_search_date_range_account
-#: model:search.date.range,label:web_search_date_range_account.range_current_trimester
-msgid "Current Fiscal Trimester"
-msgstr "Trimestre fiscal courant"
-
-#. module: web_search_date_range_account
 #: model:search.date.range,label:web_search_date_range_account.range_current_fiscal_year
 msgid "Current Fiscal Year"
 msgstr "Année fiscale courante"
 
 #. module: web_search_date_range_account
-#: model:ir.model,name:web_search_date_range_account.model_ir_http
-msgid "HTTP Routing"
-msgstr ""
-
-#. module: web_search_date_range_account
-#: model:search.date.range,label:web_search_date_range_account.range_next_trimester
-msgid "Next Fiscal Trimester"
-msgstr "Trimestre fiscal suivant"
+#: model:search.date.range,label:web_search_date_range_account.range_current_trimester
+msgid "Current Trimester"
+msgstr "Trimestre courant"
 
 #. module: web_search_date_range_account
 #: model:search.date.range,label:web_search_date_range_account.range_next_fiscal_year
@@ -43,11 +33,16 @@ msgid "Next Fiscal Year"
 msgstr "Année fiscale suivante"
 
 #. module: web_search_date_range_account
-#: model:search.date.range,label:web_search_date_range_account.range_previous_trimester
-msgid "Previous Fiscal Trimester"
-msgstr "Trimestre fiscal précédent"
+#: model:search.date.range,label:web_search_date_range_account.range_next_trimester
+msgid "Next Trimester"
+msgstr "Trimestre suivant"
 
 #. module: web_search_date_range_account
 #: model:search.date.range,label:web_search_date_range_account.range_previous_fiscal_year
 msgid "Previous Fiscal Year"
 msgstr "Année fiscale précédente"
+
+#. module: web_search_date_range_account
+#: model:search.date.range,label:web_search_date_range_account.range_previous_trimester
+msgid "Previous Trimester"
+msgstr "Trimestre précédent"
