--- a/web_custom_modifier/i18n/fr.po
+++ b/web_custom_modifier/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-19 18:07+0000\n"
-"PO-Revision-Date: 2019-12-19 13:08-0500\n"
+"POT-Creation-Date: 2020-02-17 18:41+0000\n"
+"PO-Revision-Date: 2020-02-17 13:42-0500\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -26,6 +26,11 @@ msgstr "Actif"
 #: model_terms:ir.ui.view,arch_db:web_custom_modifier.custom_modifier_search
 msgid "Archived"
 msgstr "Archivé"
+
+#. module: web_custom_modifier
+#: model:ir.model,name:web_custom_modifier.model_base
+msgid "Base"
+msgstr ""
 
 #. module: web_custom_modifier
 #: model:ir.model.fields,field_description:web_custom_modifier.field_web_custom_modifier__create_uid
@@ -68,6 +73,11 @@ msgid "Group By"
 msgstr "Grouper par"
 
 #. module: web_custom_modifier
+#: selection:web.custom.modifier,modifier:0
+msgid "Hide Selection Item"
+msgstr "Cacher un choix de sélection"
+
+#. module: web_custom_modifier
 #: model:ir.model.fields,field_description:web_custom_modifier.field_web_custom_modifier__id
 msgid "ID"
 msgstr "ID"
@@ -81,6 +91,11 @@ msgstr "Invisible"
 #: selection:web.custom.modifier,modifier:0
 msgid "Invisible (List Views)"
 msgstr "Invisible (vues listes)"
+
+#. module: web_custom_modifier
+#: model:ir.model.fields,field_description:web_custom_modifier.field_web_custom_modifier__key
+msgid "Key"
+msgstr "Clé"
 
 #. module: web_custom_modifier
 #: model:ir.model.fields,field_description:web_custom_modifier.field_web_custom_modifier____last_update
@@ -124,13 +139,9 @@ msgid "Required"
 msgstr "Obligatoire"
 
 #. module: web_custom_modifier
+#: model:ir.model.fields,field_description:web_custom_modifier.field_web_custom_modifier__type_
 #: model_terms:ir.ui.view,arch_db:web_custom_modifier.custom_modifier_search
 msgid "Type"
-msgstr "Type"
-
-#. module: web_custom_modifier
-#: model:ir.model.fields,field_description:web_custom_modifier.field_web_custom_modifier__type_
-msgid "Type "
 msgstr "Type"
 
 #. module: web_custom_modifier
