Add custom label support for help

--- a/web_custom_label/i18n/fr.po
+++ b/web_custom_label/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-06 19:43+0000\n"
-"PO-Revision-Date: 2020-02-06 14:43-0500\n"
+"POT-Creation-Date: 2020-02-17 19:52+0000\n"
+"PO-Revision-Date: 2020-02-17 14:52-0500\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -66,6 +66,11 @@ msgstr "Champ"
 #: model_terms:ir.ui.view,arch_db:web_custom_label.custom_label_search
 msgid "Group By"
 msgstr "Grouper par"
+
+#. module: web_custom_label
+#: selection:web.custom.label,position:0
+msgid "Help"
+msgstr "Aide"
 
 #. module: web_custom_label
 #: model:ir.model.fields,field_description:web_custom_label.field_web_custom_label__id
